Create Admin Add Categories Screen UI
- Get All Categories List UI
- Add New Category bottom sheet UI
- upload category image

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -39,5 +39,6 @@
     "no_network": "لا يوجد اتصال",
     "camera": "كاميرا",
     "gallery": "معرض الصور",
-    "remove": "ازالة"
+    "remove": "ازالة",
+    "category_name" : "اسم الفئة"
 }
