complete profile Settings Screen
- added change theme mode setting
- added build developer navigation to developer contacts
- added change notification subscription setting
- added build version number
- added logout setting

--- a/translations/ar.json
+++ b/translations/ar.json
@@ -30,7 +30,8 @@
     "log_out_from_app": "هل تريد تسجيل الخروج؟",
     "yes": "نعم",
     "no": "لا",
-    "dark_mode": "Dark Mode",
+    "dark_mode" : "الوضع المظلم",
+    "light_mode" : "الوضع المضيئ",
     "lang_code": "العربية",
     "notifications": "إشعارات",
     "subscribed_to_notifications": "تم الاشتراك في إشعارات",
@@ -41,4 +42,5 @@
     "gallery": "معرض الصور",
     "remove": "ازالة",
     "category_name" : "اسم الفئة"
+
 }
