--- a/translations/en.json
+++ b/translations/en.json
@@ -31,6 +31,8 @@
     "yes": "Yes",
     "no": "No",
     "dark_mode": "Dark Mode",
+    "light_mode": "Light Mode",
+    "search_products": "Search Products",
     "lang_code": "English",
     "notifications": "Notifications",
     "subscribed_to_notifications": "Notifications have been subscribed",
